# iblbrainviewer

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: iblbrainviewer_ci.yml
docs/: atlas_website_getting_started.ipynb  atlas_website_preparing_point_data.ipynb  atlas_website_preparing_region_data.ipynb  atlas_website_preparing_volumetric_data.ipynb  atlas_website_preparing_your_data.ipynb  atlas_website_understanding_the_mappings.ipynb  atlas_website_using_the_API.ipynb  atlas_website_using_the_website.ipynb  index.html
iblbrainviewer/: api.py  mappings.py  region_info.pqt  region_tree.pqt
iblbrainviewer/tests/: test_api.py  test_mappings.py
